fixed issue where index buttons looked weird on mobile

--- a/index.css
+++ b/index.css
@@ -70,11 +70,8 @@ p a:visited {
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
-    width: 35%;
-    /* width: 70%;  change when add 6 buttons*/
-    max-width: 35em;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin: 0 auto; */
+    justify-content: center;
 }
 
 .button {
@@ -91,7 +88,7 @@ p a:visited {
     text-transform: uppercase;
     position: relative;
     width: 10.3em;
-    margin: 0 auto 2em;
+    margin: 0 30px 2em;
     background: none;
     border: 2px solid #111;
     -webkit-transition: all 300ms ease;
